fix gap

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -17,16 +17,15 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 260px) 428px;
-  column-gap: 20px;
-  row-gap: 20px;
+  column-gap: 6px;
+  row-gap: 6px;
   list-style: none;
-  padding: 0;
+  padding: 50px 0 0 0;
 }
 
 .projects__div {
   border-radius: 15px;
 }
-
 
 .projects__div:first-of-type {
   grid-column: 1 / 3;
